<resources>
    <string name="app_name">FBKelasA</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="btn_tambah_teman">Tambah Teman</string>
    <string name="btn_lihat_data">Lihat Daftar Teman</string>
    <string name="hint_nama_teman">Nama teman</string>
    <string name="hint_nomor_telepon">Nomor telepon</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_edit_teman">Edit Teman</string>
    <string name="txt_key">Key :</string>
    <string name="hint_telpon_teman">Telpon teman</string>
    <string name="btn_edit_teman">Edit Teman</string>
</resources>