<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#212121"
    tools:context=".TemanEdit">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tv_edit_teman"
        android:textSize="10pt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:padding="5dp"
            android:text="@string/txt_key"
            android:textSize="10pt"
            android:textColor="@color/white"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0.7"
            android:padding="10dp"
            android:textSize="10pt"
            android:textColor="@color/white"
            android:textStyle="italic"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_nama_teman"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="10dp"
        android:ems="12"
        android:layout_gravity="center"
        app:backgroundTint="@color/white"/>

    <EditText
        android:id="@+id/edTelpon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_telpon_teman"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="10dp"
        android:ems="12"
        android:layout_gravity="center"
        app:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/btn_edit_teman"
        android:textStyle="bold"
        android:textColor="#030303"
        app:backgroundTint="#E9DB90"/>

</LinearLayout>